add Character move Forward and Right

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -9,4 +9,5 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/GameMap/YunShuChuan.YunShuChuan
 GameDefaultMap=/Game/GameMap/YunShuChuan.YunShuChuan
+GlobalDefaultGameMode=/Game/Blueprints/BP_FPS_Game_CGameModeBase.BP_FPS_Game_CGameModeBase_C
 
